[package]
name = "multi-frame-large-payload"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "multi-frame-large-payload"
path = "src/main.rs"

[dependencies]
fe2o3-amqp.workspace = true
fe2o3-amqp-types.workspace = true
tokio.workspace = true
crc32fast.workspace = true
