[package]
name = "request-reply-dynamic-node"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "request-reply-dynamic-node"
path = "src/main.rs"

[dependencies]
fe2o3-amqp.workspace = true
fe2o3-amqp-types.workspace = true
tokio.workspace = true
