[package]
name = "consumer-group"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "consumer-group"
path = "src/main.rs"

[dependencies]
fe2o3-amqp.workspace = true
fe2o3-amqp-types.workspace = true
serde_amqp.workspace = true
tokio.workspace = true
